einstellung_derive/src/trybuild_tests/validate_missing_reference.stderr
error[E0308]: mismatched types
 --> src/trybuild_tests/validate_missing_reference.rs
  |
  | #[derive(Config)]
  |          ------ expected due to this
  | struct ServerConfig {
  |     #[config(validate = validate_port)]
  |                         ^^^^^^^^^^^^^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `for<'a> fn(&'a u16) -> Result<(), _>`
                found fn item `fn(u16) -> Result<(), Box<(dyn StdError + 'static)>> {validate_port}`

error[E0308]: mismatched types
  --> src/trybuild_tests/validate_missing_reference.rs
   |
   |       #[config(validate = validate_port)]
   |                           ^------------
   |                           |
   |  _________________________arguments to this function are incorrect
   | |
   | |     port: u16,
   | |________^ expected `u16`, found `&u16`
   |
note: function defined here
  --> src/trybuild_tests/validate_missing_reference.rs
   |
   | pub fn validate_port(_: u16) -> Result<(), Box<dyn std::error::Error>> {
   |        ^^^^^^^^^^^^^ ------
help: consider removing the borrow
   |
 9 -     #[config(validate = validate_port)]
10 -     port: u16,
 9 +     #[config(validate = port: u16,
   |
